--- a/angular.json
+++ b/angular.json
@@ -33,26 +33,30 @@
 },
           "configurations": {
             "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
-              "outputHashing": "all",
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "3mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "10kb",
-                  "maximumError": "15kb"
-                }
-              ]
-            },
+  "serviceWorker": "true",
+  
+ 
+  
+  "fileReplacements": [
+    {
+      "replace": "src/environments/environment.ts",
+      "with": "src/environments/environment.prod.ts"
+    }
+  ],
+  "outputHashing": "all",
+  "budgets": [
+    {
+      "type": "initial",
+      "maximumWarning": "2mb",
+      "maximumError": "3mb"
+    },
+    {
+      "type": "anyComponentStyle",
+      "maximumWarning": "10kb",
+      "maximumError": "15kb"
+    }
+  ]
+},
             "development": {
               "optimization": false,
               "extractLicenses": false,
