--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
           "configurations": {
             "production": {
   "serviceWorker": "true",
-  
+  "ngswConfigPath": "ngsw-config.json",
+
  
   
   "fileReplacements": [
